# Simp

./: CMakeLists.txt  README.md
src/: main.cpp  os_api.h  os_linux.cpp  os_windows.cpp  stb_image.cpp
